--- a/src/pages/shoppingPage/ShoppingPage.scss
+++ b/src/pages/shoppingPage/ShoppingPage.scss
@@ -1,3 +1,5 @@
+@import "../../styles/colors.scss";
+@import "../../styles/mixins.scss";
 .shopping {
   width: 100%;
   .content {
@@ -5,6 +7,9 @@
       width: 72%;
       max-width: 800px;
       margin: 0 auto;
+      @include resp(584px) {
+        width: 95%;
+      }
     }
   }
 }
