--- a/src/components/tableRow/TableRow.scss
+++ b/src/components/tableRow/TableRow.scss
@@ -9,6 +9,7 @@
   height: 60px;
   align-items: center;
   margin-top: 10px;
+  cursor: pointer;
   @include resp(584px) {
     grid-template-columns: 10px 60px 70px 1fr 1fr 1fr;
   }
