--- a/src/components/meal/Meal.scss
+++ b/src/components/meal/Meal.scss
@@ -1,8 +1,8 @@
 @import "../../styles/colors.scss";
+@import "../../styles/mixins.scss";
 
 .meal__wrapper {
   width: 100%;
-
   .content {
     width: 65%;
     max-width: 600px;
