testing modals live

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -3,6 +3,6 @@ $secondary-blue: #577cff;
 $secondary-red: #ff4242;
 $white: #fff;
 $font-black: rgb(80, 80, 80);
-
+$dark-screen: rgba(61, 61, 61, 0.548);
 $box-shadow: 1px 2px 3px rgb(185, 185, 185);
 $button-default: #577cff;
