--- a/src/pages/shoppingPage/ShoppingPage.scss
+++ b/src/pages/shoppingPage/ShoppingPage.scss
@@ -11,5 +11,47 @@
         width: 95%;
       }
     }
+    .addNewIngredient {
+      color: $button-default;
+      font-size: 40px;
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      cursor: pointer;
+    }
+  }
+}
+.addModal {
+  display: grid;
+  place-items: center;
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: $dark-screen;
+  .content {
+    max-width: 400px;
+    width: 50%;
+    background-color: $white;
+    border-radius: 8px;
+    box-shadow: $box-shadow;
+    padding: 20px;
+    .form {
+      .inputBlock {
+        width: 100%;
+        text-align: left;
+        margin-top: 10px;
+        input {
+          width: 100%;
+          height: 30px;
+          border: none;
+          border: 1px solid rgba(192, 192, 192, 0.322);
+          border-radius: 8px;
+          outline: none;
+          font-size: 16px;
+        }
+      }
+    }
   }
 }
