--- a/src/pages/shoppingPage/ShoppingPage.scss
+++ b/src/pages/shoppingPage/ShoppingPage.scss
@@ -38,22 +38,43 @@
     box-shadow: $box-shadow;
     padding: 20px;
     @include resp(400px) {
-      width: 97%;
+      width: 95%;
     }
     .form {
       .inputBlock {
         width: 100%;
-        text-align: left;
         margin-top: 10px;
-        input {
-          width: 100%;
-          height: 30px;
-          border: none;
-          border: 1px solid rgba(192, 192, 192, 0.322);
-          border-radius: 8px;
-          outline: none;
-          font-size: 16px;
+        p {
+          text-align: left;
         }
+        .inputEl {
+          border: 1px solid rgba(133, 133, 133, 0.363);
+          border-radius: 8px;
+
+          input {
+            // padding-left: 5px;
+            width: 97%;
+            height: 30px;
+            border: none;
+            outline: none;
+            font-size: 16px;
+          }
+        }
+
+        .avatar-input {
+          border: none;
+        }
+      }
+    }
+    .button {
+      padding-top: 30px;
+      input {
+        width: 100%;
+        height: 30px;
+        border: none;
+        background-color: $secondary-blue;
+        color: $white;
+        font-size: 16px;
       }
     }
   }
