add and edit modal

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -5,4 +5,7 @@ $white: #fff;
 $font-black: rgb(80, 80, 80);
 $dark-screen: rgba(61, 61, 61, 0.548);
 $box-shadow: 1px 2px 3px rgb(185, 185, 185);
+$input-border: 1px solid rgba(133, 133, 133, 0.363);
 $button-default: #577cff;
+$button-danger: #ff4242;
+$button-disabled: #aaaaaa;
