--- a/src/components/modals/addIngredientModal/AddIngredientModal.scss
+++ b/src/components/modals/addIngredientModal/AddIngredientModal.scss
@@ -34,7 +34,7 @@
           text-align: left;
         }
         .inputEl {
-          border: 1px solid rgba(133, 133, 133, 0.363);
+          border: $input-border;
           border-radius: 8px;
 
           input {
