--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -9,3 +9,4 @@ $input-border: 1px solid rgba(133, 133, 133, 0.363);
 $button-default: #577cff;
 $button-danger: #ff4242;
 $button-disabled: #aaaaaa;
+$button-ok: #57ff7c;
