--- a/src/components/calorieCalculator/CalorieCalculator.scss
+++ b/src/components/calorieCalculator/CalorieCalculator.scss
@@ -14,6 +14,9 @@
     place-items: center;
     .title {
       color: $white;
+      @include resp(500px) {
+        font-size: 18px;
+      }
     }
     .calculation {
       form {
@@ -36,20 +39,23 @@
             padding-left: 7px;
           }
           .inputEl {
-            border: $input-border;
+            background-color: white;
+
             border-radius: 8px;
 
             input,
             select {
-              padding-left: 5px;
-              width: 100%;
+              background-color: white;
+              width: 90%;
               height: 30px;
               border: none;
               outline: none;
               font-size: 16px;
-              color: white;
+              color: $main-blue;
               border-radius: 8px;
-              background-color: $main-blue;
+              @include resp(500px) {
+                width: 97%;
+              }
             }
           }
         }
