--- a/src/pages/homePage/HomePage.scss
+++ b/src/pages/homePage/HomePage.scss
@@ -1,3 +1,5 @@
+@import "../../styles/mixins.scss";
+
 .homePage {
   width: 100%;
   margin-bottom: 100px;
@@ -5,6 +7,9 @@
     max-width: 1100px;
     width: 70%;
     margin: 0 auto;
+    @include resp(500px) {
+      width: 95%;
+    }
     .hero {
       height: 70vh;
       display: grid;
@@ -13,25 +18,41 @@
         width: 100%;
         display: grid;
         grid-template-columns: 1fr 1fr;
-
+        @include resp(500px) {
+          display: flex;
+          flex-direction: column-reverse;
+        }
         .text {
           display: grid;
           place-items: center;
+          @include resp(500px) {
+            margin-top: 10px;
+          }
           .content {
             display: flex;
             flex-direction: column;
+            @include resp(500px) {
+              width: 300px;
+              margin: 0 auto;
+            }
             .small {
               font-size: 36px;
               font-weight: 700;
               line-height: 36px;
               text-align: left;
               padding-left: 8px;
+              @include resp(500px) {
+                font-size: 24px;
+              }
             }
             .big {
               font-size: 136px;
               font-weight: 900;
               line-height: 106px;
               text-align: left;
+              @include resp(500px) {
+                font-size: 100px;
+              }
             }
           }
         }
