--- a/src/components/calorieCalculator/CalorieCalculator.scss
+++ b/src/components/calorieCalculator/CalorieCalculator.scss
@@ -19,6 +19,23 @@
       }
     }
     .calculation {
+      .result {
+        padding: 50px 0;
+        color: $white;
+        h2 {
+          margin-top: 30px;
+        }
+        button {
+          margin-top: 50px;
+          padding: 10px 40px;
+          background-color: $button-default;
+          border: none;
+          a {
+            text-decoration: none;
+            color: white;
+          }
+        }
+      }
       form {
         padding: 50px 0;
         margin: 0 auto;
