--- a/src/components/menu/Menu.scss
+++ b/src/components/menu/Menu.scss
@@ -1,8 +1,9 @@
 @import "../../styles/colors.scss";
 @import "../../styles/mixins.scss";
+@import "../../styles/constants.scss";
 .navMenu {
   background-color: $main-blue;
-  width: 70%;
+  width: $content_width;
   margin: 0 auto;
   border-radius: 0 0 15px 15px;
   color: $white;
