--- a/src/pages/userProfilePage/UserProfilePage.scss
+++ b/src/pages/userProfilePage/UserProfilePage.scss
@@ -11,49 +11,31 @@
     background-color: $main-blue;
     width: $content_width;
     margin: 0 auto;
-    @include resp(500px) {
-      width: 95%;
-    }
-    form {
-      .inputBlock {
-        width: 50%;
-        margin: 16px auto;
-        @include resp(500px) {
-          width: 95%;
-        }
-        .inputLabel {
-          text-align: left;
-          padding-left: 7px;
-          color: $white;
-        }
-        .inputEl {
-          background-color: $white;
-          border-radius: 4px;
 
-          input,
-          select {
-            width: 95%;
-            height: 30px;
-            border: none;
-            outline: none;
-          }
+    .info {
+      display: flex;
+      justify-content: space-between;
+      width: 50%;
+      margin: 50px auto;
+      p {
+        color: white;
+        text-align: left;
+        margin-top: 10px;
+        span {
+          padding-right: 7px;
+          font-weight: 700;
+          color: rgb(202, 202, 202);
         }
       }
-      .button {
-        margin-top: 30px;
-        input {
-          cursor: pointer;
-          width: 50%;
-          margin: 0 auto;
-          background-color: $button-default;
-          border: none;
-          color: $white;
-          height: 35px;
-          border-radius: 4px;
-          @include resp(500px) {
-            width: 95%;
-          }
-        }
+    }
+    .actions {
+      .editProfile {
+        background-color: $button-default;
+        width: 50%;
+        border: none;
+        color: $white;
+        height: 40px;
+        border-radius: 4px;
       }
     }
   }
