--- a/src/components/modals/loginUserModal/LoginUserModal.scss
+++ b/src/components/modals/loginUserModal/LoginUserModal.scss
@@ -4,32 +4,31 @@
 
 .loginModal {
   width: 100%;
-  height: 100vh;
-  position: fixed;
-  top: 0;
-  left: 0;
-  display: grid;
-  place-items: center;
-  background-color: $dark-screen;
   .content {
-    background-color: $main-blue;
-    padding: 20px;
-    border-radius: 8px;
-    width: 30%;
-    @include resp(500px) {
-      width: 80%;
+    .exitBtn {
+      position: absolute;
+      top: 20px;
+      left: 20px;
     }
     .form {
       .modalTitle {
-        color: $white;
-        margin: 30px;
+        color: $orange-main;
+        margin: 30px 0 0 0;
+        font-size: 36px;
+      }
+      .line {
+        width: 30%;
+        height: 3px;
+        background-color: $orange-main;
+        margin: 0 auto;
+        margin-bottom: 60px;
       }
       .inputBlock {
         margin-top: 20px;
         .inputLabel {
           text-align: left;
           padding-left: 7px;
-          color: white;
+          color: $font-black;
         }
         .inputEl {
           background-color: $white;
@@ -37,6 +36,7 @@
           margin: 0 auto;
           text-align: left;
           border-radius: 8px;
+          border: $input-border;
 
           input {
             height: 30px;
@@ -51,21 +51,90 @@
         input {
           color: white;
           margin-top: 40px;
-          background-color: $button-default;
+          background-color: $orange-main;
           width: 100%;
           border: none;
-          height: 30px;
+          height: 38px;
           border-radius: 4px;
+          cursor: pointer;
         }
       }
       .dontHaveAcc {
         text-align: right;
         margin-top: 20px;
         p {
-          color: $button-default;
+          color: $orange-main;
           cursor: pointer;
         }
       }
     }
   }
 }
+
+// .loginModal {
+//   width: 100%;
+//   height: 100vh;
+//   position: fixed;
+//   top: 0;
+//   left: 0;
+//   display: grid;
+//   place-items: center;
+//   background-color: $dark-screen;
+//   .content {
+//     background-color: $main-blue;
+//     padding: 20px;
+//     border-radius: 8px;
+//     width: 30%;
+//     @include resp(500px) {
+//       width: 80%;
+//     }
+//     .form {
+//       .modalTitle {
+//         color: $white;
+//         margin: 30px;
+//       }
+//       .inputBlock {
+//         margin-top: 20px;
+//         .inputLabel {
+//           text-align: left;
+//           padding-left: 7px;
+//           color: white;
+//         }
+//         .inputEl {
+//           background-color: $white;
+//           width: 98%;
+//           margin: 0 auto;
+//           text-align: left;
+//           border-radius: 8px;
+
+//           input {
+//             height: 30px;
+//             width: 90%;
+//             border: none;
+//             margin: 2px;
+//             outline: none;
+//           }
+//         }
+//       }
+//       .button {
+//         input {
+//           color: white;
+//           margin-top: 40px;
+//           background-color: $button-default;
+//           width: 100%;
+//           border: none;
+//           height: 30px;
+//           border-radius: 4px;
+//         }
+//       }
+//       .dontHaveAcc {
+//         text-align: right;
+//         margin-top: 20px;
+//         p {
+//           color: $button-default;
+//           cursor: pointer;
+//         }
+//       }
+//     }
+//   }
+// }
