--- a/src/pages/homePage/HomePage.scss
+++ b/src/pages/homePage/HomePage.scss
@@ -1,69 +1,52 @@
+@import "../../styles/colors.scss";
 @import "../../styles/mixins.scss";
+@import "../../styles/constants.scss";
 
 .homePage {
   width: 100%;
-  margin-bottom: 100px;
+  height: 100vh;
+  background-image: url("../../../public/images/bg.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  @include resp(500px) {
+    background-image: none;
+  }
+  .bg {
+    background: rgb(201, 214, 220);
+    background: linear-gradient(
+      150deg,
+      rgba(201, 214, 220, 0) 0%,
+      rgba(201, 214, 220, 1) 99%
+    );
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -1;
+  }
   .content {
-    max-width: 1100px;
-    width: 70%;
+    max-width: 1900px;
+    width: 90%;
     margin: 0 auto;
-    @include resp(500px) {
-      width: 95%;
-    }
+
     .hero {
-      height: 70vh;
-      display: grid;
-      place-items: center;
+      padding-top: 120px;
       .content {
-        width: 100%;
-        display: grid;
-        grid-template-columns: 1fr 1fr;
+        width: 50%;
+        margin: 0 auto;
         @include resp(500px) {
-          display: flex;
-          flex-direction: column-reverse;
+          width: 90%;
         }
-        .text {
-          display: grid;
-          place-items: center;
-          @include resp(500px) {
-            margin-top: 10px;
-          }
-          .content {
-            display: flex;
-            flex-direction: column;
-            @include resp(500px) {
-              width: 300px;
-              margin: 0 auto;
-            }
-            .small {
-              font-size: 36px;
-              font-weight: 700;
-              line-height: 36px;
-              text-align: left;
-              padding-left: 8px;
-              @include resp(500px) {
-                font-size: 24px;
-              }
-            }
-            .big {
-              font-size: 136px;
-              font-weight: 900;
-              line-height: 106px;
-              text-align: left;
-              @include resp(500px) {
-                font-size: 100px;
-              }
-            }
-          }
-        }
-        .image {
-          img {
-            max-width: 390px;
-            min-width: 200px;
-            width: 90%;
-          }
+        .small {
+          text-align: left;
+          margin-top: 20px;
         }
       }
+    }
+    .calculator {
+      margin-top: 150px;
     }
   }
 }
