--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,12 +1,17 @@
-$main-blue: #32384b;
+$blue-main: #2e2f3b;
+$orange-main: #fd5f3d;
+$orange-hover: #c4532e;
+$font-dark: #4e4e4e;
+$input-border: 1px solid rgba(133, 133, 133, 0.363);
+$box-shadow: 1px 2px 3px rgb(185, 185, 185);
+$dark-screen: rgba(61, 61, 61, 0.548);
+
 $secondary-blue: #577cff;
 $secondary-red: #ff4242;
 $white: #fff;
 $font-black: rgb(80, 80, 80);
-$dark-screen: rgba(61, 61, 61, 0.548);
-$box-shadow: 1px 2px 3px rgb(185, 185, 185);
-$input-border: 1px solid rgba(133, 133, 133, 0.363);
 $button-default: #577cff;
 $button-danger: #ff4242;
 $button-disabled: #aaaaaa;
 $button-ok: #57ff7c;
+$main-blue: black;
