--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -2,10 +2,11 @@ $blue-main: #2e2f3b;
 $orange-main: #fd5f3d;
 $orange-hover: #c4532e;
 $font-dark: #4e4e4e;
+$font-light: #d3d3d3;
 $input-border: 1px solid rgba(133, 133, 133, 0.363);
 $box-shadow: 1px 2px 3px rgb(185, 185, 185);
 $dark-screen: rgba(61, 61, 61, 0.548);
-
+$silver-box: #f3f3f3;
 $secondary-blue: #577cff;
 $secondary-red: #ff4242;
 $white: #fff;
