--- a/src/components/modals/createUserModal/CreateUserModal.scss
+++ b/src/components/modals/createUserModal/CreateUserModal.scss
@@ -3,79 +3,75 @@
 @import "../../../styles/constants.scss";
 
 .createUserModal {
-  position: fixed;
-  top: 0;
-  left: 0;
-  background-color: $dark-screen;
-  height: 100vh;
   width: 100%;
-  display: grid;
-  place-items: center;
   .content {
-    padding: 20px 0;
-    border-radius: 8px;
-    background-color: $main-blue;
-    width: $content_width;
-    margin: 0 auto;
-    position: relative;
-    @include resp(500px) {
-      width: 95%;
-    }
     .exitBtn {
       position: absolute;
       top: 20px;
-      right: 20px;
-      color: white;
+      left: 20px;
       cursor: pointer;
-      display: grid;
-      place-items: center;
-      background-color: white;
-      border-radius: 50px;
-      padding: 5px;
     }
     form {
-      width: 70%;
-      @include resp(500px) {
-        width: 95%;
+      height: 200px !important;
+      .modalTitle {
+        color: $orange-main;
+        margin: 30px 0 0 0;
+        font-size: 36px;
+      }
+      .line {
+        width: 40%;
+        height: 3px;
+        background-color: $orange-main;
+        margin: 0 auto;
+        margin-bottom: 50px;
+      }
+      .file-input {
+        text-align: left;
       }
       .inputBlock {
-        width: 100%;
-        margin: 16px auto;
-        @include resp(500px) {
-          width: 95%;
-        }
+        margin-top: 10px;
         .inputLabel {
           text-align: left;
           padding-left: 7px;
-          color: $white;
+          color: $font-black;
         }
         .inputEl {
           background-color: $white;
-          border-radius: 4px;
+          width: 98%;
+          margin: 0 auto;
+          text-align: left;
+          border-radius: 8px;
+          border: $input-border;
 
           input,
           select {
-            width: 95%;
+            padding-left: 3px;
             height: 30px;
+            width: 90%;
             border: none;
+            margin: 2px;
             outline: none;
           }
         }
       }
       .button {
-        margin-top: 30px;
         input {
-          cursor: pointer;
-          width: 50%;
-          margin: 0 auto;
-          background-color: $button-default;
+          color: white;
+          margin-top: 40px;
+          background-color: $orange-main;
+          width: 100%;
           border: none;
-          color: $white;
-          height: 35px;
+          height: 38px;
           border-radius: 4px;
-          @include resp(500px) {
-            width: 95%;
-          }
+          cursor: pointer;
+        }
+      }
+      .dontHaveAcc {
+        text-align: right;
+        margin-top: 20px;
+        p {
+          color: $orange-main;
+          cursor: pointer;
         }
       }
     }
