--- a/src/components/modals/loginUserModal/LoginUserModal.scss
+++ b/src/components/modals/loginUserModal/LoginUserModal.scss
@@ -9,6 +9,7 @@
       position: absolute;
       top: 20px;
       left: 20px;
+      cursor: pointer;
     }
     .form {
       .modalTitle {
@@ -39,6 +40,7 @@
           border: $input-border;
 
           input {
+            padding-left: 3px;
             height: 30px;
             width: 90%;
             border: none;
@@ -70,71 +72,3 @@
     }
   }
 }
-
-// .loginModal {
-//   width: 100%;
-//   height: 100vh;
-//   position: fixed;
-//   top: 0;
-//   left: 0;
-//   display: grid;
-//   place-items: center;
-//   background-color: $dark-screen;
-//   .content {
-//     background-color: $main-blue;
-//     padding: 20px;
-//     border-radius: 8px;
-//     width: 30%;
-//     @include resp(500px) {
-//       width: 80%;
-//     }
-//     .form {
-//       .modalTitle {
-//         color: $white;
-//         margin: 30px;
-//       }
-//       .inputBlock {
-//         margin-top: 20px;
-//         .inputLabel {
-//           text-align: left;
-//           padding-left: 7px;
-//           color: white;
-//         }
-//         .inputEl {
-//           background-color: $white;
-//           width: 98%;
-//           margin: 0 auto;
-//           text-align: left;
-//           border-radius: 8px;
-
-//           input {
-//             height: 30px;
-//             width: 90%;
-//             border: none;
-//             margin: 2px;
-//             outline: none;
-//           }
-//         }
-//       }
-//       .button {
-//         input {
-//           color: white;
-//           margin-top: 40px;
-//           background-color: $button-default;
-//           width: 100%;
-//           border: none;
-//           height: 30px;
-//           border-radius: 4px;
-//         }
-//       }
-//       .dontHaveAcc {
-//         text-align: right;
-//         margin-top: 20px;
-//         p {
-//           color: $button-default;
-//           cursor: pointer;
-//         }
-//       }
-//     }
-//   }
-// }
