--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -16,3 +16,7 @@ $button-danger: #ff4242;
 $button-disabled: #aaaaaa;
 $button-ok: #57ff7c;
 $main-blue: black;
+
+$protein-color: #9163e3;
+$carbs-color: #e7bb43;
+$fat-color: #81bfbb;
