--- a/src/components/foodItems/FoodItems.scss
+++ b/src/components/foodItems/FoodItems.scss
@@ -1,34 +1,35 @@
+@import "../../styles/colors.scss";
+@import "../../styles/mixins.scss";
+@import "../../styles/constants.scss";
 .foodItems {
+  margin-top: 5px;
+  width: 100%;
   display: flex;
   align-items: center;
-  transition: 0.3s;
-  margin-top: 5px;
-  cursor: pointer;
-  &:hover {
-    background-color: rgb(238, 238, 238);
-  }
+
   .foodImage {
     width: 50px;
-    height: 50px;
+    border-radius: 8px;
   }
-  .foodTitle {
-    margin-left: 20px;
-    font-size: 20px;
-  }
-  .foodWeight {
-    padding-left: 10px;
-  }
-}
-.mealModal {
-  position: fixed;
-  top: 0;
-  left: 0;
-  height: 100vh;
-  width: 100%;
-  display: grid;
-  place-items: center;
-  background-color: rgba(61, 61, 61, 0.548);
-  .content {
-    background-color: white;
+  .foodInfo {
+    padding-left: 18px;
+    .foodTitle {
+      font-size: 20px;
+      color: $font-dark;
+    }
   }
 }
+
+// .mealModal {
+//   position: fixed;
+//   top: 0;
+//   left: 0;
+//   height: 100vh;
+//   width: 100%;
+//   display: grid;
+//   place-items: center;
+//   background-color: rgba(61, 61, 61, 0.548);
+//   .content {
+//     background-color: white;
+//   }
+// }
