--- a/src/components/leftSidebar/LeftSidebar.scss
+++ b/src/components/leftSidebar/LeftSidebar.scss
@@ -3,13 +3,29 @@
 @import "../../styles/constants.scss";
 
 .leftSidebar {
-  width: 100%;
+  width: 260px;
   height: 100vh;
   background-color: $blue-main;
+  position: fixed;
+  left: 0;
+  top: 0;
+  transition: 0.3s;
+  .collapse {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    color: $font-light;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    p {
+      padding-left: 10px;
+    }
+  }
   .content {
     width: 90%;
     height: 90%;
-    margin: 50px auto 0 auto;
+    margin: 100px auto 0 auto;
     .avatar {
       margin-bottom: 30px;
       img {
@@ -28,14 +44,20 @@
     }
     .navigation {
       margin-top: 30px;
+      width: 235px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      font-size: 20px;
+
       .link-item {
         display: flex;
         align-items: center;
         width: 150px;
-        margin: 20px auto;
+        margin-top: 30px;
         cursor: pointer;
-        font-size: 20px;
         color: $font-light;
+
         &:hover {
           color: white;
           transition: 0.1s;
