--- a/src/pages/dashboard/dashboard.scss
+++ b/src/pages/dashboard/dashboard.scss
@@ -3,23 +3,22 @@
 @import "../../styles/constants.scss";
 
 .layout {
-  display: grid;
-  grid-template-columns: 260px 1fr;
+  background: rgb(201, 214, 220);
+  background: linear-gradient(
+    150deg,
+    rgba(201, 214, 220, 0) 0%,
+    rgba(201, 214, 220, 1) 99%
+  );
   .dashboard {
-    background: rgb(201, 214, 220);
-    background: linear-gradient(
-      150deg,
-      rgba(201, 214, 220, 0) 0%,
-      rgba(201, 214, 220, 1) 99%
-    );
-    width: 100%;
-    height: 100vh;
+    margin-left: 260px;
     display: grid;
     place-items: center;
+    transition: 0.3s;
     .content {
       border-radius: 10px;
-      width: 97%;
-      height: 97%;
+      width: 95%;
+      height: 95%;
+      min-height: 92vh;
       background-color: $silver-box;
     }
   }
