--- a/src/components/leftSidebar/LeftSidebar.scss
+++ b/src/components/leftSidebar/LeftSidebar.scss
@@ -10,6 +10,9 @@
   left: 0;
   top: 0;
   transition: 0.3s;
+  @include resp(615px) {
+    display: none;
+  }
   .collapse {
     position: absolute;
     top: 10px;
@@ -65,6 +68,31 @@
         p {
           padding-left: 10px;
         }
+      }
+    }
+  }
+}
+.mobileMenu {
+  display: none;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  background-color: $blue-main;
+  width: 100%;
+  height: 60px;
+  @include resp(615px) {
+    display: grid;
+    place-items: center;
+  }
+  .content {
+    width: 90%;
+    margin: 0 auto;
+    .mobile_navigation {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      .link-item {
+        color: $font-light;
       }
     }
   }
