--- a/src/components/meal/Meal.scss
+++ b/src/components/meal/Meal.scss
@@ -7,6 +7,11 @@
   box-shadow: $box-shadow;
   border-radius: 8px;
   background-color: rgb(255, 255, 255);
+
+  @include resp(1122px) {
+    margin: 3px auto;
+  }
+
   .meal_content {
     text-align: left;
     padding: 5px 10px;
