--- a/src/components/leftSidebar/LeftSidebar.scss
+++ b/src/components/leftSidebar/LeftSidebar.scss
@@ -93,6 +93,11 @@
       align-items: center;
       .link-item {
         color: $font-light;
+        @include resp(330px) {
+          p {
+            font-size: 13px;
+          }
+        }
       }
     }
   }
