--- a/src/components/meal/Meal.scss
+++ b/src/components/meal/Meal.scss
@@ -11,6 +11,9 @@
   @include resp(1122px) {
     margin: 3px auto;
   }
+  @include resp(500px) {
+    width: 100%;
+  }
 
   .meal_content {
     text-align: left;
