--- a/src/components/graphStats/GraphStats.scss
+++ b/src/components/graphStats/GraphStats.scss
@@ -5,16 +5,24 @@
 .graphStats {
   width: 400px;
   margin: 0 auto;
-
+  @include resp(500px) {
+    width: 100%;
+  }
   &__content {
     padding: 20px;
     .chart {
       width: 250px;
       margin: 50px auto;
+      @include resp(500px) {
+        width: 60%;
+      }
     }
     .title {
       margin-bottom: 30px;
       border-bottom: 2px solid $orange-main;
+      @include resp(500px) {
+        font-size: 14px;
+      }
     }
     .writtenStats {
       &__content {
@@ -24,6 +32,9 @@
         justify-content: space-between;
         font-size: 20px;
         font-weight: 700;
+        @include resp(500px) {
+          font-size: 16px;
+        }
         .protein {
           color: $protein-color;
         }
