--- a/src/pages/dashboard/dashboard.scss
+++ b/src/pages/dashboard/dashboard.scss
@@ -13,6 +13,10 @@
     display: grid;
     place-items: center;
     transition: 0.3s;
+    @include resp(500px) {
+      display: block;
+      min-width: 300px;
+    }
     .content {
       border-radius: 10px;
       width: 95%;
