creator create meal setup

--- a/src/components/dayMenu/DayMenu.scss
+++ b/src/components/dayMenu/DayMenu.scss
@@ -12,7 +12,11 @@
       padding: 0;
     }
     .screenNavigation {
+      margin-bottom: 30px;
       width: 100%;
+      @include resp(400px) {
+        margin-bottom: 0;
+      }
       .navContent {
         display: flex;
         align-items: center;
