--- a/src/pages/dashboard/dashboard.scss
+++ b/src/pages/dashboard/dashboard.scss
@@ -9,10 +9,13 @@
     rgba(201, 214, 220, 0) 0%,
     rgba(201, 214, 220, 1) 99%
   );
+  min-height: 100vh;
+
   .dashboard {
     display: grid;
     place-items: center;
     transition: 0.3s;
+    min-height: 100vh;
     @include resp(500px) {
       display: block;
       min-width: 300px;
