search and ing done

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,6 +1,7 @@
 $blue-main: #2e2f3b;
 $orange-main: #fd5f3d;
 $orange-hover: #c4532e;
+$yellow-main: #fac546;
 $font-dark: #4e4e4e;
 $font-light: #d3d3d3;
 $input-border: 1px solid rgba(133, 133, 133, 0.363);
