--- a/src/components/creator/creatorComponents/searchResultItem/searchResultItem.scss
+++ b/src/components/creator/creatorComponents/searchResultItem/searchResultItem.scss
@@ -5,7 +5,7 @@
   margin-top: 5px;
   width: 100%;
   cursor: pointer;
-  background-color: white;
+  border: 1px solid $yellow-main;
   border-radius: 8px;
   transition: 0.3s;
   &:hover {
@@ -18,7 +18,13 @@
     .image {
       img {
         width: 50px;
+        border-radius: 8px;
+        margin-right: 20px;
       }
+    }
+    .resultName {
+      font-weight: 700;
+      font-size: 18px;
     }
   }
 }
