--- a/src/components/creator/creatorForms/createMealForm/createMealForm.scss
+++ b/src/components/creator/creatorForms/createMealForm/createMealForm.scss
@@ -8,6 +8,14 @@
     display: grid;
     grid-template-columns: 1fr 2fr 2fr;
     gap: 10px;
+    .submitBTN {
+      background-color: $orange-main;
+      text-align: center;
+      padding: 10px 20px;
+      color: white;
+      border-radius: 8px;
+      cursor: pointer;
+    }
     // MAIN INFO SECTION
     .mainInfo {
       &__content {
@@ -77,7 +85,7 @@
             width: 100%;
             height: 200px;
             overflow-y: scroll;
-            background-color: rgb(240, 240, 240);
+            background-color: rgb(255, 255, 255);
             margin-top: 5px;
             box-shadow: $box-shadow;
 
