adding amount and unit to creation

--- a/src/components/creator/creatorComponents/addedIngredientItem/addedIngredientItem.scss
+++ b/src/components/creator/creatorComponents/addedIngredientItem/addedIngredientItem.scss
@@ -30,6 +30,7 @@
         height: 30px;
         border-right: none;
         outline: $font-light;
+        padding-left: 4px;
       }
       select {
         height: 32px;
