--- a/src/components/creator/creatorComponents/addStepInput/addStepInput.scss
+++ b/src/components/creator/creatorComponents/addStepInput/addStepInput.scss
@@ -5,13 +5,19 @@
   margin-top: 10px;
   width: 100%;
   &__content {
+    width: 100%;
     .stepNum {
-      font-size: 20px;
-      color: $font-dark;
-      font-weight: 700;
-      margin-bottom: 10px;
+      width: 100%;
+      height: 30px;
+      padding: 8px 0 8px 8px;
+      outline: none;
+      border-radius: 8px;
+      border: none;
+      box-shadow: $box-shadow;
     }
     .textareaInput {
+      padding: 8px 0 8px 8px;
+      margin-top: 15px;
       width: 100%;
       min-height: 100px;
       resize: vertical;
@@ -19,6 +25,18 @@
       border-radius: 8px;
       border: none;
       box-shadow: $box-shadow;
+    }
+    .addBTN {
+      margin-top: 20px;
+      width: 100%;
+      display: grid;
+      place-items: center;
+      color: white;
+      cursor: pointer;
+      height: 24px;
+      border-radius: 8px;
+      background-color: $orange-main;
+      padding: 8px 0 8px 8px;
     }
   }
 }
