--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -15,7 +15,7 @@ $font-black: rgb(80, 80, 80);
 $button-default: #577cff;
 $button-danger: #ff4242;
 $button-disabled: #aaaaaa;
-$button-ok: #57ff7c;
+$button-ok: #2ab949;
 $main-blue: black;
 
 $protein-color: #9163e3;
