--- a/src/components/creator/creatorComponents/addStepInput/addStepInput.scss
+++ b/src/components/creator/creatorComponents/addStepInput/addStepInput.scss
@@ -6,26 +6,33 @@
   width: 100%;
   &__content {
     width: 100%;
-    .stepNum {
-      width: 100%;
-      height: 30px;
-      padding: 8px 0 8px 8px;
-      outline: none;
-      border-radius: 8px;
-      border: none;
-      box-shadow: $box-shadow;
+    .inputBox {
+      margin: 10px auto 0 auto;
+      p {
+        color: $font-dark;
+        margin-top: 20px;
+      }
+      .stepNum {
+        width: 100%;
+        height: 30px;
+        padding: 8px 0 8px 8px;
+        outline: none;
+        border-radius: 8px;
+        border: none;
+        box-shadow: $box-shadow;
+      }
+      .textareaInput {
+        padding: 8px 0 8px 8px;
+        width: 100%;
+        min-height: 100px;
+        resize: vertical;
+        outline: none;
+        border-radius: 8px;
+        border: none;
+        box-shadow: $box-shadow;
+      }
     }
-    .textareaInput {
-      padding: 8px 0 8px 8px;
-      margin-top: 15px;
-      width: 100%;
-      min-height: 100px;
-      resize: vertical;
-      outline: none;
-      border-radius: 8px;
-      border: none;
-      box-shadow: $box-shadow;
-    }
+
     .addBTN {
       margin-top: 20px;
       width: 100%;
