--- a/src/pages/dashboard/dashboard.scss
+++ b/src/pages/dashboard/dashboard.scss
@@ -12,15 +12,16 @@
   min-height: 100vh;
 
   .dashboard {
-    display: grid;
-    place-items: center;
     transition: 0.3s;
     min-height: 100vh;
+    padding-top: 30px;
+
     @include resp(500px) {
       display: block;
       min-width: 300px;
     }
     .content {
+      margin: 0px auto;
       border-radius: 10px;
       width: 95%;
       height: 95%;
