--- a/src/components/creator/Creator.scss
+++ b/src/components/creator/Creator.scss
@@ -7,34 +7,115 @@
   &__content {
     width: 98%;
     margin: 0 auto;
-
+    .line {
+      height: 2px;
+      width: 100%;
+      background-color: rgb(187, 187, 187);
+      margin: 20px 0;
+    }
     .screenTitle {
+      padding-top: 100px;
       h2 {
         font-size: 36px;
         color: $orange-main;
       }
     }
     .creative {
+      margin-top: 160px;
       width: 100%;
       text-align: left;
-      button {
-        margin-top: 30px;
-        background: none;
-        border: none;
-        cursor: pointer;
-        color: $orange-main;
-        font-size: 24px;
-        border-bottom: 2px solid $orange-main;
+
+      .createPlanBlock {
+        &__content {
+          .blockTitle {
+            width: 100%;
+            &__content {
+              width: 60%;
+              margin: 0 auto;
+              h2 {
+                text-align: center;
+              }
+              p {
+                margin: 30px 0;
+              }
+            }
+          }
+          .action {
+            text-align: right;
+            margin-top: 50px;
+            button {
+              background-color: $orange-main;
+              border: none;
+              cursor: pointer;
+              color: white;
+              font-size: 16px;
+              padding: 10px 20px;
+              border-radius: 8px;
+            }
+          }
+        }
       }
       .createMealBlock {
+        margin-top: 30px;
+        .blockTitle {
+          width: 100%;
+          &__content {
+            width: 60%;
+            margin: 0 auto;
+            h2 {
+              text-align: center;
+            }
+            p {
+              margin: 30px 0;
+            }
+          }
+        }
         &__content {
-          button {
-            background: none;
-            border: none;
-            cursor: pointer;
-            color: $orange-main;
-            font-size: 24px;
-            border-bottom: 2px solid $orange-main;
+          .action {
+            text-align: right;
+            margin-top: 50px;
+            button {
+              background-color: $orange-main;
+              border: none;
+              cursor: pointer;
+              color: white;
+              font-size: 16px;
+              padding: 10px 20px;
+              border-radius: 8px;
+            }
+          }
+        }
+      }
+      .createIngredientBlock {
+        margin-top: 30px;
+
+        &__content {
+          padding: 0 0 30px 0;
+          .blockTitle {
+            width: 100%;
+            &__content {
+              width: 60%;
+              margin: 0 auto;
+              h2 {
+                text-align: center;
+              }
+              p {
+                margin: 30px 0;
+              }
+            }
+          }
+          .action {
+            text-align: right;
+            margin-top: 50px;
+            button {
+              background-color: $orange-main;
+              border: none;
+              cursor: pointer;
+              color: white;
+              font-size: 16px;
+              padding: 10px 20px;
+              border-radius: 8px;
+            }
           }
         }
       }
