--- a/src/pages/dashboard/dashboard.scss
+++ b/src/pages/dashboard/dashboard.scss
@@ -14,7 +14,7 @@
   .dashboard {
     transition: 0.3s;
     min-height: 100vh;
-    padding-top: 30px;
+    padding: 30px 0 60px 0;
 
     @include resp(500px) {
       display: block;
