--- a/src/components/creator/creatorComponents/singleMealDisplay/SingleMealDisplay.scss
+++ b/src/components/creator/creatorComponents/singleMealDisplay/SingleMealDisplay.scss
@@ -54,6 +54,7 @@
       right: 20px;
       cursor: pointer;
     }
+
     .mainInfo {
       display: flex;
       justify-content: space-between;
@@ -83,6 +84,7 @@
 
         .ingredientBlock {
           margin-top: 30px;
+
           .singleIngredient {
             margin-top: 5px;
             display: flex;
@@ -97,10 +99,48 @@
               }
             }
             .ingredientName {
-              margin-left: 10px;
+              margin-left: 20px;
               font-size: 16px;
               font-weight: 700;
             }
+            &--amount {
+              margin-left: 20px;
+              font-size: 16px;
+              font-weight: 700;
+              span {
+                margin-left: 3px;
+              }
+            }
+          }
+        }
+      }
+    }
+    .mealControl {
+      width: 100%;
+      &__content {
+        display: flex;
+        align-items: center;
+        .deleteBtn {
+          background-color: $orange-main;
+          border-radius: 8px;
+          display: flex;
+          align-items: center;
+          padding: 5px 15px;
+          color: white;
+          p {
+            margin-left: 10px;
+          }
+        }
+        .editBtn {
+          margin-left: 20px;
+          background-color: $orange-main;
+          border-radius: 8px;
+          display: flex;
+          align-items: center;
+          padding: 5px 15px;
+          color: white;
+          p {
+            margin-left: 10px;
           }
         }
       }
