--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -17,7 +17,7 @@ $button-danger: #ff4242;
 $button-disabled: #aaaaaa;
 $button-ok: #2ab949;
 $main-blue: black;
-
+$rightBar-bg: #f8f8f8;
 $protein-color: #9163e3;
 $carbs-color: #e7bb43;
 $fat-color: #81bfbb;
