--- a/src/components/calorieCalculator/CalorieCalculator.scss
+++ b/src/components/calorieCalculator/CalorieCalculator.scss
@@ -7,14 +7,21 @@
   border: 1px solid rgba(236, 236, 236, 0.692);
   border-radius: 15px;
   max-width: 900px;
+  min-width: 700px;
   width: 70%;
   display: grid;
   place-items: center;
   margin: 0 auto;
+  position: relative;
   @include resp(500px) {
     width: 100%;
   }
-
+  .exitBtn {
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    cursor: pointer;
+  }
   .content {
     padding-top: 60px;
     width: 80%;
