--- a/src/components/creator/Creator.scss
+++ b/src/components/creator/Creator.scss
@@ -43,6 +43,10 @@
           .action {
             text-align: right;
             margin-top: 50px;
+            width: 50%;
+            margin: 0 auto;
+            display: flex;
+            justify-content: space-between;
             button {
               background-color: $orange-main;
               border: none;
