--- a/src/components/leftSidebar/LeftSidebar.scss
+++ b/src/components/leftSidebar/LeftSidebar.scss
@@ -102,3 +102,11 @@
     }
   }
 }
+.calculateCaloriesModal {
+  background-color: $dark-screen;
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  display: grid;
+  place-items: center;
+}
