--- a/src/components/creator/creatorComponents/usersMeals/UsersMeals.scss
+++ b/src/components/creator/creatorComponents/usersMeals/UsersMeals.scss
@@ -7,6 +7,7 @@
 
   &__content {
     display: grid;
-    grid-template-columns: repeat(auto-fill, 170px) 15%;
+    grid-template-columns: repeat(auto-fill, 170px);
+    justify-content: center;
   }
 }
