--- a/src/components/creator/creatorForms/createPlan/plan/plan.scss
+++ b/src/components/creator/creatorForms/createPlan/plan/plan.scss
@@ -1,13 +1,28 @@
+@import "../../../../../styles/colors.scss";
+@import "../../../../../styles/mixins.scss";
+@import "../../../../../styles/constants.scss";
+
 .plan {
   width: 100%;
   &__content {
     .days {
       width: 100%;
+      .spaceLine {
+        width: 100%;
+        height: 2px;
+        background-color: $orange-main;
+        margin: 20px 0;
+      }
       &__content {
         width: 100%;
         display: grid;
         grid-template-columns: repeat(auto-fill, 300px);
+
         gap: 5px;
+        justify-content: center;
+        @include resp(400px) {
+          grid-template-columns: repeat(auto-fill, 95%);
+        }
       }
     }
   }
