--- a/src/components/meal/Meal.scss
+++ b/src/components/meal/Meal.scss
@@ -6,7 +6,7 @@
   margin-top: 3px;
   box-shadow: $box-shadow;
   border-radius: 8px;
-  background-color: rgb(255, 255, 255);
+  background-color: white;
 
   @include resp(1122px) {
     margin: 3px auto;
