--- a/src/pages/dashboard/dashboard.scss
+++ b/src/pages/dashboard/dashboard.scss
@@ -21,12 +21,12 @@
       min-width: 300px;
     }
     .content {
-      margin: 0px auto;
-      border-radius: 10px;
-      width: 95%;
-      height: 95%;
-      min-height: 92vh;
-      background-color: $silver-box;
+      // margin: 0px auto;
+      // border-radius: 10px;
+      // width: 95%;
+      // height: 95%;
+      // min-height: 92vh;
+      // background-color: $silver-box;
     }
   }
 }
